tests/miniJava/neg/004352_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public java int [] ( ) { return 0 ; } }
